Updated ClientController with ClientDTO